--- a/style.css
+++ b/style.css
@@ -6,13 +6,18 @@ body {
     text-align: center;
     margin-top: 100px;
 }
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 2px 2px 10px #666666;
+}
 #commentBox {
     max-width: 60%;
     margin: 100px auto;
     border: 1px solid #333333;
-    padding: 30px ;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 1px 1px 5px #555555;
 }
-
 input,textarea {
     display: block;
     padding: 5px;
@@ -34,13 +39,18 @@ button {
 .userPhoto {
     float: left;
     margin-right: 20px;
-    padding: 10px 15px;
-    border-right: 1px solid #333333;
+    padding: 22px 34px;
+    border: 1px solid #333333;
+    border-radius: 5px;
+    box-shadow: 1px 1px 5px #555555;
 }
 .userComment {
     text-align: left;
-    padding: 30px;
-    margin-left: 20px;
+    padding: 35px;
+    margin-left: 200px;
+    border: 1px solid #333333;
+    border-radius: 5px;
+    box-shadow: 1px 1px 5px #555555;
 }
 .deleteBtn {
     background-color: #ff3388;
